<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9252323"
    android:gravity="center|fill_vertical"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".activities.RecuperaPassActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:gravity="bottom|top"
        app:srcCompat="@drawable/logospotify"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/txtContent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F3EBEB"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:text="@string/txtContent1"/>
    <TextView
        android:id="@+id/txtContent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F3EBEB"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/txtContent2"/>
    <TextView
        android:id="@+id/txtContent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F3EBEB"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/txtContent3"/>

    <EditText
        android:id="@+id/txtEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="30"
        android:textColor="#F3EBEB"
        android:textSize="25sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnSendMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSendMail" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F3EBEB"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/txtContent4"></TextView>


</LinearLayout>